# JexidaMCP

./: .cursorrules  .gitignore  DEPLOYMENT_COMPLETE.md  DEPLOY_INSTRUCTIONS.md  DESIGN.md  MCP_TOOL_REGISTRATION.md  README.md  SERVER_RESTART_GUIDE.md  SSH_COMMAND_PATTERN.md  SSH_TROUBLESHOOTING.md  UNIFI_TOOLS_SUMMARY.md  WHY_SUDDEN_CHANGE.md  check_remote_unifi.py  check_secrets_db.py  check_unifi.py  copy_to_remote.py  create_synology_secret.py  create_synology_secret_remote.py  create_synology_secrets.sh  create_synology_via_api.py  delete_test_synology_secrets.sh  deploy.sh  deploy_auth_fix.py  deploy_db_fix.py  deploy_django.py  fix_auth.patch  fix_auth.py  fix_auth2.py  from  get_ssh_output.py  jexida-mcp-deploy.tar  jexida.cmd.nope  migrate_secrets.py  migrate_secrets_to_django.py  migration_log.txt  network_diagnosis.md  patch_server.py  pyproject.toml  register_admin_tools.py  register_all_unifi_tools.ps1  (+8 more)
.cursor/: mcp.json
.devcontainer/: QUICKSTART.md  README.md  WSL2_SSH_WORKAROUND.md  devcontainer.json  post-create.sh
.jexida/: session.json
config/: discord_server.yml
core/: __init__.py  logging.py
docs/: azure_mcp_tools.md  n8n_integration.md  patreon_integration.md  worker_nodes.md
jexida_cli/: __init__.py  agent.py  config.py  context.py  executor.py  main.py  mcp_client.py  ssh_client.py  ui.py
jexida_dashboard/: jexida-django.service  manage.py  requirements.txt
jexida_refs/: CHANGELOG.md
mcp_server_files/: README.md  alembic.ini  config.py  config_db.py  dashboard.py  database.py  deploy.sh  env.example  env.production  get_wifi_clients.py  jexida-mcp.service  logging_config.py  main.py  mcp_server.py  requirements.txt  run.sh  schemas.py  security_policy.json  server.py  tool_registry.py
reports/: HARDENING_SUMMARY.md  step0_baseline.md  step1_access_paths.md  step2_vlan_plan.md  step3_wifi.md  step4_vlan_changes.md  step5_firewall.md  step6_threat_management.md  step7_dns_dhcp.md  step8_switch_ap.md  step9_remote_access.md
scripts/: add_n8n_secrets.py  provision_node.py  register_azure_sdk_tools.py  register_capability_tools.py  register_discord_tools.py  register_droid2.py  register_n8n_tools.py  register_patreon_tools.py  seed_worker_node.py  setup_n8n_node.sh
tests/: __init__.py  test_agent.py  test_azure_flows.py  test_azure_tools.py  test_discord_tools.py  test_executor.py  (+3 more)
(+303 files in other folders)
