[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jexida-cli"
version = "0.1.0"
description = "Jexida Agent CLI - A terminal agent that connects to a remote MCP server via SSH"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "tomlkit>=0.12.0",
]

[project.scripts]
jexida = "jexida_cli.main:main"

[tool.setuptools]
packages = ["jexida_cli"]

[tool.black]
line-length = 100
target-version = ['py310']

