[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jexida-cli"
version = "0.2.0"
description = "Jexida Agent CLI - A terminal agent for MCP server interaction with SSH, model management, and LLM chat"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["cli", "mcp", "terminal", "agent", "llm", "ssh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "tomlkit>=0.12.0",
    "httpx>=0.24.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pylint>=2.17.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
jexida = "jexida_cli.main:main"

[tool.setuptools]
packages = ["jexida_cli", "jexida_cli.ui", "jexida_cli.state", "jexida_cli.commands"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
